ISP20230296 - 報表下載功能都改成非同步進行、且加上提示訊息

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -456,6 +456,9 @@
         }
 
     function ToReport(IsToPDF) {
+
+        msg.WithInfoTimer("Report Generating...");
+
         $.ajax({
             url: "@Url.Action("WashReport", "AccessoryOvenWash", new { Area = "BulkFGT" })",
             type: 'POST',
@@ -467,7 +470,7 @@
                 Seq2: $("#Seq2").val(),
                 IsToPDF: IsToPDF
             }),
-            async: false,
+            async: true,
             success: function (data) {
                 if (data.Result) {
                     window.location.href = data.reportPath;
