--- a/Quality/Quality/Areas/BulkFGT/Views/RandomTumblePillingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/RandomTumblePillingTest/Index.cshtml
@@ -1018,12 +1018,14 @@
 
         $("#Excel").on("click", function () {
 
+            msg.WithInfoTimer("Report Generating...");
+
             $.ajax({
                 url: "@Url.Action("ToExcel")",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ ReportNo: $('#Main_ReportNo').val()}),
-                async: false,
+                async: true,
                 success: function (data) {
                     if (data.Result) {
                         window.location.href = data.reportPath;
@@ -1040,12 +1042,14 @@
 
         $("#PDF").on("click", function () {
 
+            msg.WithInfoTimer("Report Generating...");
+
             $.ajax({
                 url: "@Url.Action("ToPDF")",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ ReportNo: $('#Main_ReportNo').val()}),
-                async: false,
+                async: true,
                 success: function (data) {
                     if (data.Result) {
                         window.location.href = data.reportPath;
