--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -408,6 +408,9 @@
 
 
     function ToReport(IsToPDF) {
+
+        msg.WithInfoTimer("Report Generating...");
+
         $.ajax({
             url: "@Url.Action("OvenReport", "AccessoryOvenWash", new { Area = "BulkFGT" })",
             type: 'POST',
@@ -419,7 +422,7 @@
                 Seq2: $("#Seq2").val(),
                 IsToPDF: IsToPDF
             }),
-            async: false,
+            async: true,
             success: function (data) {
                 if (data.Result) {
                     window.location.href = data.reportPath;
