--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
@@ -485,6 +485,9 @@
         }
 
     function ToReport(IsToPDF) {
+
+        msg.WithInfoTimer("Report Generating...");
+
         $.ajax({
             url: "@Url.Action("WashingFastnessReport", "AccessoryOvenWash", new { Area = "BulkFGT" })",
             type: 'POST',
@@ -496,7 +499,7 @@
                 Seq2: $("#Seq2").val(),
                 IsToPDF: IsToPDF
             }),
-            async: false,
+            async: true,
             success: function (data) {
                 if (data.Result) {
                     window.location.href = data.reportPath;
